z-index change to prevent menu instagram logo overlap

--- a/web/themes/custom/myusf/sass/src/partials/_components.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_components.scss
@@ -361,7 +361,7 @@ a.card-rollover {
 		padding-top: 0.3125rem;
 		top: 0px;
 		left: 0px;
-		z-index: 2;	
+		z-index: 1;	
 		text-shadow: 1px 1px 2px rgba(0,0,0,.9);
 	    
 	}
